--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   },
   "dependencies": {
     "electron": "^26.0.0",
-    "three": "^0.152.0",
+    "font-list": "^1.5.1",
     "gsap": "^3.12.2",
-    "monaco-editor": "^0.38.0"
+    "monaco-editor": "^0.38.0",
+    "three": "^0.152.0"
   }
 }
