--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "animotion",
   "version": "1.0.0",
-  "main": "main.js",
+  "main": "src/main/main.js",
   "scripts": {
     "start": "electron ."
   },
