--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "src/main/main.js",
   "scripts": {
+    "dev": "vite",
+    "build": "vite build",
     "start": "electron ."
   },
   "dependencies": {
@@ -10,6 +12,7 @@
     "font-list": "^1.5.1",
     "gsap": "^3.12.2",
     "monaco-editor": "^0.38.0",
-    "three": "^0.152.0"
+    "three": "^0.152.0",
+    "vite": "^6.2.1"
   }
 }
