--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "font-list": "^1.5.1",
     "gsap": "^3.12.2",
     "monaco-editor": "^0.38.0",
-    "three": "^0.152.0",
-    "vite": "^6.2.1"
+    "three": "^0.152.0"
+  },
+  "devDependencies": {
+    "vite": "^6.2.5"
   }
 }
