--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "src/main/main.js",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"vite\" \"npm run electron-dev\"",
+    "electron-dev": "wait-on tcp:5173 && electron .",
     "build": "vite build",
     "start": "electron ."
   },
@@ -17,6 +18,8 @@
     "three": "^0.152.0"
   },
   "devDependencies": {
+    "concurrently": "^8.2.2",
+    "wait-on": "^7.2.0",
     "vite": "^6.2.5"
   }
 }
