--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "start": "electron ."
   },
   "dependencies": {
-    "@theatre/core": "^0.7.2",
-    "@theatre/studio": "^0.7.2",
     "electron": "^26.0.0",
     "font-list": "^1.5.1",
     "gsap": "^3.12.2",
@@ -19,7 +17,7 @@
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
-    "wait-on": "^7.2.0",
-    "vite": "^6.2.5"
+    "vite": "^6.2.5",
+    "wait-on": "^7.2.0"
   }
 }
